2004-10-30  Andrew Cagney  <cagney@gnu.org>

	* mips-tdep.h (MIPS_FIRST_EMBED_REGNUM)
	(MIPS_LAST_EMBED_REGNUM): Add.
	* config/mips/tm-mips.h (FIRST_EMBED_REGNUM)
	(LAST_EMBED_REGNUM): Delete.
	* mipsv4-nat.c, mips-tdep.c, mips-linux-tdep.c: Update.

	* config/mips/tm-mips.h (PS_REGNUM): Delete.
	* mips-tdep.h (MIPS_PS_REGNUM): Add.
	* remote-vxmips.c, mipsv4-nat.c, mips-tdep.c: Update.
	* mips-linux-nat.c: Update.

	* mips-tdep.h: Add comments on registers.
	(MIPS_UNUSED_REGNUM): Define.
	* config/mips/tm-mips.h (ZERO_REGNUM, UNUSED_REGNUM)
	(T9_REGNUM, V0_REGNUM, A0_REGNUM): Delete.
	* irix5-nat.c, mipsv4-nat.c, mips-linux-tdep.c: Update.
	* mips-linux-nat.c, remote-mips.c: Update.

	* config/mips/tm-mips.h (t_insn): Delete.
	* mips-tdep.c (mips_fetch_instruction, mips_skip_trampoline_code):
	Replace t_insn with ULONGEST.

2004-10-30  Mark Kettenis  <kettenis@gnu.org>

	* mipsnbsd-tdep.c: Include "regset.h" and "gdb_assert.h".
	(MIPS_PC_REGNUM, MIPS_FP0_REGNUM, MIPS_FSR_REGNUM)
	(MIPSNBSD_NUM_GREGS, MIPSNBSD_NUM_FPREGS): New defines.
	(fetch_core_registers, fetch_elfcore_registers): Remove functions.
	(mipsnbsd_core_fns, mipsnbsd_elfcore_fns): Remove variables.
	(mipsnbsd_core_osabi_sniffer): New function.
	(mipsnbsd_init_abi): Set regset_from_core_section.
	(_initialize_mipsnbsd_tdep): Remove calls to
	deprecated_add_core_fns.
	(mipsnbsd_supply_fpregset, mipsnbsd_supply_gregset)
	(mipsnbsd_regset_from_core_section): New functions.
	(mipsnbsd_gregset, mipsnbsd_fpregset): New variables.
	* Makefile.in (mipsnbsd-tdep.o): Update dependencies.

	* procfs.c (procfs_fetch_registers, procfs_store_registers): Like
	Remove optimization for DEPRECATED_FP_REGNUM.

2004-10-30  Andrew Cagney  <cagney@gnu.org>

	* alpha-tdep.c (alpha_setup_arbitrary_frame): Delete.
	* config/alpha/tm-alpha.h (SETUP_ARBITRARY_FRAME): Delete.
	(alpha_setup_arbitrary_frame): Delete.
	* mips-tdep.c (setup_arbitrary_frame): Delete.
	* config/mips/tm-mips.h (SETUP_ARBITRARY_FRAME): Delete.