@@ -1,5 +1,9 @@
 2004-10-30  Andrew Cagney  <cagney@gnu.org>
 
+	* mips-tdep.h (MIPS_PRID_REGNUM): Add.
+	* config/mips/tm-mips.h (PRID_REGNUM): Delete.
+	* mips-tdep.c: Update.
+
 	* mips-tdep.h (MIPS_FIRST_EMBED_REGNUM)
 	(MIPS_LAST_EMBED_REGNUM): Add.
 	* config/mips/tm-mips.h (FIRST_EMBED_REGNUM)
